<resources>
    <string name="app_name">Android_Demo_Kotlin</string>
    <string name="title_activity_kotlin_basic">Kotlin_bASIC</string>
    <string name="ui_element">UI_Element</string>
    <string name="go_to_kotlin_basic">Go to KOTLIN bASIC</string>
    <string name="hint_name">Name</string>
    <string name="hint_email_id">Email Id</string>
    <string name="rb_name_male">Male</string>
    <string name="rb_name_female">Female</string>
    <string name="txtview_gender">Gender</string>
    <string name="txt_hobbies">Hobbies</string>
    <string name="txt_cricket">Cricket</string>
    <string name="basket_ball">Basket Ball</string>
    <string name="football">Football</string>
    <string name="btn_submit">Submit</string>
    <string name="enter_name_toast">Enter Name</string>
    <string name="enter_email_toast">Enter Email</string>
    <string name="done">Done</string>
    <string name="feedback_title">Enter feedback details to send\nto the developer:</string>
    <string name="layouts_btn">Layouts</string>
    <string name="btn_linearlayout">Linear Layout</string>
    <string name="hint_your_name">Your Name</string>
    <string name="hint_your_email">Your Email</string>
    <string name="hint_feedback_details">Feedback Details...</string>
    <string name="chck_txt_would_you_like_and_email_response">Would you like and email response?</string>
    <string name="btn_txt_send_feedback">Send Feedback</string>
    <string name="btn_relative_layout">Relative Layout</string>
    <string name="btn_constraint_layout">constraint layout</string>
    <string name="txt_frame_demo">Frame Demo</string>
    <string name="button_is_under_merge_tag">Button is under merge tag</string>
    <string name="txt_gridview_1">1</string>
    <string name="txt_gridview_2">2</string>
    <string name="txt_gridview_3">3</string>
    <string name="txt_gridview_4">4</string>
    <string name="txt_gridview_5">5</string>
    <string name="txt_gridview_6">6</string>
    <string name="btn_frame_layout">Frame Layout</string>
    <string name="btn_grid_layout">Grid Layout</string>
    <string name="txt_include_and_merge_tag">Include and Merge</string>
    <string name="chain_button_1">1</string>
    <string name="chain_button_2">2</string>
    <string name="chain_button__3">3</string>
    <string name="listview">Listview</string>
    <string name="recyclerview">Recyclerview</string>
    <string name="listview_name">listview_name</string>
    <string name="listview_address">listview_address</string>
    <string name="recyclerview_grid">Recyclerview Grid</string>
    <string-array name="country">
        <item>India</item>
        <item>USA</item>
        <item>China</item>
        <item>Japan</item>
        <item>Other</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="viewpager_one">ViewPager One</string>
    <string name="view_pager_two_recyclerview">View Pager Two Recyclerview</string>
    <string name="view_pager_two">View Pager Two</string>
    <string name="name">name</string>
    <string name="date">date</string>
    <string name="api_level">api_level</string>
    <string name="description_text">Description Text</string>
    <string name="expandable_recyclerview">Expandable Recyclerview</string>
    <string name="expandable_listview">Expandable Listview</string>
    <string name="bottom_navigation">Bottom Navigation</string>
    <string name="textview_guideline">TextView</string>
    <string name="fragments">Fragments</string>
    <string name="favorite_fragment_btn_txt">Favorite Fragment</string>
    <string name="recent_fragment_btn_txt">Recent Fragment</string>
    <string name="txt_favorites_fragment">Favorites</string>
    <string name="txt_recent_fragment">Recent</string>
    <string name="intents">Intents</string>
    <string name="implicit_intent">Implicit Intent</string>
    <string name="enter_message_hint_fragment">Enter Message</string>
    <string name="btn_send_message_txt">Send Message</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_add_message">Add Message</string>
    <string name="menu_view_message">View Message</string>
    <string name="btn_txt_go_back_to_main_activity">Go Back to Main Activity</string>
    <string name="fragment_txtview_choose_image">Choose Image</string>
    <string name="pending_intent">Pending intent</string>
    <string name="btn_txt_navigation_controller">Navigation Controller</string>
    <string name="title_activity_pending">PendingActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="btn_txt_start_pending_intent">start Pending Intent</string>
    <string name="tabone_string">Tab 1</string>
    <string name="tabtwo_string">Tab Two</string>
    <string name="mainactivity_tag">MainActivityLog</string>
    <string name="fragment_count">FragmentCountLog</string>
    <string name="mainactivity_log_tag">MainActivityLog</string>
    <string name="activity_log_tag">ActivitytwoLog</string>
    <string name="google_url">https://www.google.com/</string>
    <string name="txt_data_name">Txt data</string>
    <string name="name_key_intent">name</string>
    <string name="lbl_bottomNavigation_activity">Bottomnavigation Activity</string>
    <string name="lbl_fragment_activity">Fragment Activity</string>
    <string name="lbl_intent_activity">Intent Activity</string>
    <string name="lbl_expandablelistview_sctivity">ExpandableListview Activity</string>
    <string name="lbl_expandablerecyclerview_activity">ExpandableRecyclerview Activity</string>
    <string name="lbl_viewpagertworecyclerview_activity">ViewpagertwoRecyclerview Activity</string>
    <string name="lbl_viewpagertwo_activity">ViewPagertwo Activity</string>
    <string name="lbl_viewpagerone_activity">ViewPagerone Activity</string>
    <string name="lbl_gridLayoutRecycler_viewactivity">GridLayoutRecycler ViewActivity</string>
    <string name="lbl_constraintLayoutGuideline_activity">ConstraintLayoutGuideline Activity</string>
    <string name="lbl_recyclerView_activity">RecyclerView Activity</string>
    <string name="lbl_listview_activity">Listview Activity</string>
    <string name="lbl_includeandMerge_activity">IncludeandMerge Activity</string>
    <string name="lbl_gridLayout_activity">GridLayout Activity</string>
    <string name="lbl_frameLayout_activity">FrameLayout Activity</string>
    <string name="lbl_layout_activity">Layout Activity</string>
    <string name="lbl_constraintLayout_activity">ConstraintLayout Activity</string>
    <string name="lbl_relativeLayout_activity">RelativeLayout Activity</string>
    <string name="lbl_linearLayout_activity">LinearLayout Activity</string>
    <string name="lbl_uiElement_activity">UiElement Activity</string>
    <string name="people_data_key_name">PEOPLE_DATA</string>
    <string name="fragment_count_log_tag">FragmentCountLog</string>
    <string name="key_intent">key</string>
    <string name="hello_nullsafe_string">Hello</string>
    <string name="key_message_intent">message</string>
    <string name="image_receive_type">image/</string>
    <string name="lbl_navgraph_activity">Navgraph Activity</string>
    <string name="receiver_txt">Times Up!!!!</string>
    <string name="open_app_title">Open Activity</string>
    <string name="app_notification_txt">App Notification</string>
    <string name="my_app_txt">My app</string>
    <string name="btn_login_txt">Login</string>
    <string name="btn_sign_up_txt">Sign up</string>
    <string name="btn_txt_webview">WebView</string>
    <string name="gmail_login_url"><![CDATA[https://accounts.google.com/signin/v2/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&service=mail&sacu=1&rip=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin]]></string>
    <string name="gmail_signup_url"><![CDATA[https://accounts.google.com/signup/v2/webcreateaccount?service=mail&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&dsh=S1930074213%3A1647334895977165&biz=false&flowName=GlifWebSignIn&flowEntry=SignUp]]></string>
    <string name="hint_searchbar">Search here</string>
    <string name="hint_password">Password</string>
    <string name="txt_login">Login</string>
    <string name="url_api_login">api/login</string>
    <string name="request_method">POST</string>
    <string name="btn_recyclerview_api_call">Recyclerview api call</string>
    <string name="enter_password_toast">Please Enter Password</string>
    <string name="Invalid_login_toast">InValid Login</string>
    <string name="email_key_json">email</string>
    <string name="password_key_json">password</string>
    <string name="json_content_type">Content-Type</string>
    <string name="content_type_json">application/json</string>
    <string name="enter_job_toast">Enter Job Name</string>
    <string name="btn_txt_mvp">MVP</string>
    <string name="btn_txt_mvc">MVC</string>
    <string name="toast_permission_granted">Permission already granted.</string>
    <string name="toast_request_permission">Please request permission.</string>
    <string name="toast_permission_granted_location_data">Permission Granted, Now you can access location data.</string>
    <string name="toast_permission_granted_camera">Permission Granted, Now you can access camera.</string>
    <string name="open_settings">Open Settings</string>
    <string name="grant_permission_settings">Grant Permission in settings</string>
    <string name="btn_text_settings">Settings</string>
    <string name="package_keyword">package</string>
    <string name="btn_text_cancel">Cancel</string>
    <string name="toast_granted">Granted</string>
</resources>