<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".UiElementActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editxt_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/hint_name"
        android:inputType="textCapSentences"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txthint_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/hint_email_id"
        android:textColorHint="@color/purple_200"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/teal_200"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editxt_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editxt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtview_Gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:text="@string/txtview_gender"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txthint_name" />

    <RadioGroup
        android:id="@+id/Rg_gender"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        android:checkedButton="@id/Rb_male"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txthint_name">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/Rb_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/rb_name_male"
            android:textColor="@android:color/holo_red_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/Rb_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/rb_name_female"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_hobbies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_hobbies"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Rg_gender" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/chcx_cricket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/txt_cricket"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_hobbies" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/chcx_football"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/football"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/chcx_cricket"
        app:layout_constraintTop_toBottomOf="@id/txt_hobbies" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/chcx_basketball"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/basket_ball"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/chcx_football"
        app:layout_constraintTop_toBottomOf="@id/txt_hobbies" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/ripple_effect"
        android:text="@string/btn_submit"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chcx_basketball" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>