<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".differentLayout.LayoutActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="16dp"
        android:text="@string/btn_linearlayout"
        android:background="@color/black"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="16dp"
        android:text="@string/btn_relative_layout"
        android:background="@color/black"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_linear_layout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_constraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="16dp"
        android:text="@string/btn_constraint_layout"
        android:background="@color/black"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_relative_layout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_framelayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="16dp"
        android:text="@string/btn_frame_layout"
        android:textColor="@color/white"
        android:background="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_constraint" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_gridlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="16dp"
        android:text="@string/btn_grid_layout"
        android:textColor="@color/white"
        android:background="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_framelayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_includelayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="16dp"
        android:text="@string/txt_include_and_merge_tag"
        android:background="@color/black"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_gridlayout" />

</androidx.constraintlayout.widget.ConstraintLayout>